@@ -74,8 +74,8 @@ AS_IF([test "x$enable_release" = "xyes"],
        AS_IF([test "x$CXXFLAGS" = "x"],
 	     [CXXFLAGS="-O3"]) ],
       [test "x$enable_debug" = "xyes"],
-      [CFLAGS="-DNOINLINE -Wall -g -O0"
-       CXXFLAGS="-DNOINLINE -Wall -g -O0"
+      [CFLAGS="-DNOINLINE -Wextra -g -O0"
+       CXXFLAGS="-DNOINLINE -Wextra -g -O0"
        AC_DEFINE([DEBUG],
 		 [],
 		 ["Enable debug code features"]) ])
@@ -205,19 +205,6 @@ AS_IF([test "x$enable_asm" = "xyes"],
 	      [AC_DEFINE([IL_INLINE_ASM],
 			 [1],
 			 [Define if you can support at least some ASM]) ]) ])
-
-dnl
-dnl Test warning build options
-dnl
-AC_ARG_ENABLE([warning],
-              [AC_HELP_STRING([--enable-warning],
-			      [Compile breaks on warnings])],
-	      [build_warning="$enable_warning"],
-	      [build_warning="no"])
-
-AS_IF([test "$build_warning" = "yes"],
-      [ADD_CFLAGS([-Wall -Werror])],
-      [])
 
 dnl
 dnl Memory alignment functions
@@ -425,7 +412,9 @@ AS_CASE([$host],
 	[AC_DEFINE([MAX_OS_X],
 		   [],
 		   [Building on Mac OS X]) 
-	 PLATFORM="OSX"])
+	 PLATFORM="OSX"],
+	 [*linux*],
+	 [PLATFORM="LINUX"])
 AC_SUBST([PLATFORM])
 
 AM_CONDITIONAL([WINDOWS_BUILD],
@@ -453,7 +442,7 @@ AC_CONFIG_FILES([Makefile
 		 docs/Makefile 
 		 data/Makefile 
 		 data/IL.pc data/ILU.pc data/ILUT.pc
-		 test/format_test/format_checks.sh])
+		 test/format_test/format_checks.sh test/format_test/ilu_checks.sh])
 dnl		 projects/Makefile]) 
 # src-IL/Makefile  src-IL/src/Makefile  src-IL/include/Makefile  src-ILU/Makefile  src-ILU/src/Makefile  src-ILU/include/Makefile  src-ILUT/Makefile  src-ILUT/src/Makefile  src-ILUT/include/Makefile  include/Makefile  include/IL/Makefile
 AC_OUTPUT
